# sentence2vec

./: .gitignore  Cargo.toml  README.md
src/: file.rs  lib.rs  prelude.rs  sentence2vec.rs  word2vec.rs
tests/: load.rs  sentence2vec.rs  word2vec.txt
