[package]
name = "sentence2vec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "partition"
path = "bin/partition.rs"

[[bin]]
name = "extract"
path = "bin/extract_list.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
bincode = { version = "1.3.3", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
loading = ["bincode", "serde_bytes", "serde"]
partition = ["log", "env_logger", "loading"]
