[package]
name = "sentence2vec"
version = "0.1.0"
edition = "2021"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com>"]
description = "A tool to convert a sentence to a vector. It can be used to partition word2vec data. It can also be used to extract a list of words from a word2vec data file."
license = "MIT"
repository = "https://github.com/DimitriTimoz/sentence2vec"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "partition"
path = "bin/partition.rs"

[[bin]]
name = "extract"
path = "bin/extract_list.rs"

[dependencies]
tokio = { version = "1.12", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
bincode = { version = "1.3.3", optional = true }
log = { version = "0.4", optional = true }
env_logger = { version = "0.10", optional = true }

[features]
loading = ["bincode", "serde_bytes", "serde"]
partition = ["log", "env_logger", "loading"]

